update config.yaml with location table

--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,19 @@
+  GNU nano 2.0.6                                  File: config.yaml                                                                           
+
 nitf:
   <entity>: articles
   <primary_key>: /nitf/head/docdata/doc-id/@id-string
   <fields>:
     /nitf/head/title: title
+    /nitf/head/meta[14]/@content: print_headline
     /nitf/head/pubdata/@date.publication: date
+    /nitf/head/pubdata/@ex-ref: url
+    /nitf/body/body.head/byline: author
+    /nitf/head/meta[16]/@content: section
+    /nitf/head/meta[17]/@content: subsection
+    /nitf/head/meta[12]/@content: print_page_number
+    /nitf/head/meta[13]/@content: print_section
+    /nitf/body/body.head/abstract: abstract
     /nitf/body/body.content: paragraphs
 
 head/docdata/key-list:
@@ -13,6 +23,23 @@ head/docdata/key-list:
       "keyword/@key":
         <fieldname>: keys
         <joiner>: " || "
+
+head/docdata/identified-content:
+  <entity>: locations
+  <primary_key>: /nitf/head/docdata/doc-id/@id-string
+  <fields>:
+      "/nitf/head/docdata/identified-content/location":
+        <fieldname>: locations
+        <joiner>: " || "
+
+
+
+
+
+
+
+
+
 
 
 
